[package]
name = "taskscheduler"
version = "0.1.2"
edition = "2021"

[dependencies]
chrono = { version = "0.4.39", features = ["serde"] }
serde = { version = "1.0.217", features = ["serde_derive"] }
typetag = "0.2.19"
warp = "0.3.7"
piglog = { git = "https://git.pigroy.xyz/pigroy/piglog.git" }
serde_json = "1.0.137"
