[package]
name = "taskscheduler"
version = "0.1.2"
edition = "2021"

[dependencies]
chrono = { version = "0.4.39", features = ["serde"] }
serde = { version = "1.0.217", features = ["serde_derive"] }
typetag = "0.2.19"
warp = { version = "0.3.7", features = ["tls"] }
piglog = { git = "https://git.joepigott.dev/pigroy/piglog.git" }
serde_json = "1.0.137"
tokio-rustls = "0.26.2"
rustls = "0.23.31"
webpki-roots = "1.0.2"
