[package]
name = "taskscheduler"
authors = ["Joe Pigott <joe@joepigott.dev>"]
description = "A smart todo list that applies CPU scheduling logic to organize your tasks"
version = "0.3.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.39", features = ["serde"] }
serde = { version = "1.0.217", features = ["serde_derive"] }
typetag = "0.2.19"
warp = { version = "0.3.7" }
piglog = { git = "https://git.joepigott.dev/pigroy/piglog.git" }
serde_json = "1.0.137"

[features]
https = ["warp/tls"]
